welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: identifier expected but '(' found.
      if (occurrences(T,ind)==T.(ind-1)) {ind = ind +1}
                                ^